# locallibrary

./: .coverage  .gitignore  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_language_book_language.py  0003_alter_author_options_bookinstance_borrower.py  0004_alter_bookinstance_options.py
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: author_detail.html  author_list.html  book_detail.html  book_list.html  borrowed_book_list.html
catalog/tests/: test_forms.py  test_models.py  test_views.py
locallibrary/: settings.py  urls.py
locallibrary/templates/: 404.html
