[tool.poetry]
name = "locallibrary"
version = "0.1.0"
description = ""
authors = ["fevse <fedulov.v.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.17"
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"
whitenoise = "^6.3.0"
pytest-cov = "^4.0.0"
setuptools = "^61.1.0"


[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
